# getbased-agents

./: .gitignore  CONTRIBUTING.md  README.md  RELEASING.md  SECURITY.md  getbased_mcp.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: codeql.yml  publish.yml  test.yml
scripts/: smoke.py
src/getbased_agent_stack/: __init__.py
src/lens/: server.py
systemd/: getbased-rag.service
tests/: conftest.py  test_integration.py  test_server.py  test_tools.py
